# micropython

./: .gitignore  CMakeLists.txt
tools/: cmake-qstr.py
